fixed navbar color so that it only shows background color on mobile clicked

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,7 +16,7 @@
 	padding: 0;
 }
 
-.navbar-collapse {	
+.navbar-collapse.show, .navbar-collapse.collapsing {	
 	background-color: #f0f0f0;
 }
 
